--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
        <div class="half-width">
         <h1>Wellcome To </h1>
         <h1><span class="name-highlight">Soykot Alam</span> World</h1>
         <h3>Marin Stack Web Developer</h3>
         <p>I am A.K.M Shah Alam, Professional Front-end and Back-end WordPress Developer. If you are looking for a reliable web Developer, l would say that you have come to the right place. To be precise, If you need someone who can build static websites or can develop a WordPress Theme, on that I am glad to say that I can assist you in that particular work. My working skills include HTML5, CSS3,Bootstrap, JQuery, Javascript, nodejs,Firebase, MongoDB, PHP, Wordpress Theme, Woocommerce projects.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/a-k-m-shah-alam-8933b4192/">HAIR ME</a>
        </div>
        <div class="half-width">
            <img src="images/my 2.png" alt="">
