--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="top-banner">
        <div class="half-width">
         <h1>Wellcome To </h1>
-        <h1><span class="name-highlight">Soykot Alam</span> World</h1>
+        <h1><span class="orenge-highlight">Shah Alam</span> World</h1>
         <h3>Marin Stack Web Developer</h3>
         <p>I am A.K.M Shah Alam, Professional Front-end and Back-end WordPress Developer. If you are looking for a reliable web Developer, l would say that you have come to the right place. To be precise, If you need someone who can build static websites or can develop a WordPress Theme, on that I am glad to say that I can assist you in that particular work. My working skills include HTML5, CSS3,Bootstrap, JQuery, Javascript, nodejs,Firebase, MongoDB, PHP, Wordpress Theme, Woocommerce projects.</p>
         <a class="link-button" target="_blank" href="https://www.linkedin.com/in/a-k-m-shah-alam-8933b4192/">HAIR ME</a>
@@ -20,5 +20,34 @@
            <img src="images/my 2.png" alt="">
        </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/my-3.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Became A World's No 1 Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+        </div>
+    </section>
+    <section class="experince-area">
+        <h1 class="ex-header">Exeperinces</h1>
+        <div id="full-stack" class="half-width single-experince">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="orenge-highlight">2021 - Prasent| Pro Lavel Web Dev</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called React JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="wordpress-deg" class="half-width single-experince">
+            <h2>Wordpress web Designer</h2>
+            <h3 class="orenge-highlight">2018-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Soykot Alam 2021, All Rights Reserve.</p>
+    </footer>
+    
 </body>
 </html>
